# ai-projects

./: .gitignore  LICENSE
log-analyzer-via-llm/: .gitignore  chat_template_analyzer.py  nice_dataset.jsonl  prepare_dataset.py  pyproject.toml  run_train.sh  train.py
