[project]
name = "log-analyzer-via-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==0.36.0",
    "torch==2.8.0",
    "fbgemm-gpu-genai==1.3.0",
    "transformers==4.55.4",
    "trl==0.22.2",
    "datasets==4.3.0",
    "unsloth-zoo==2025.11.6",
    "unsloth==2025.11.6",
    "modelscope==1.33.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true